<resources>
    <string name="app_name">Peru TB project</string>

    <!-- Strings related to login -->
    <string name="prompt_UserName">UserName</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_UserName">This UserName address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--WELCOME-->
    <string name="welcome">WELCOME</string>
    <!--WELCOME TO THE PERU TB PROJECT-->
    <string name="welcometoperutbproj">WELCOME TO THE PERU TB PROJECT</string>

    <!--No Patient Last Name.-->
    <string name="no_patient_last_name">No Patient ID.</string>
    <!--Please input patient last name.-->
    <string name="please_input_patient_last_name">Please input patient ID.</string>
    <!--Is patient last name correct?-->
    <string name="is_patient_last_name_correct">Is patient ID correct?</string>
    <string name="title_activity_main">Peru TB project</string>
    <!--nurse panel-->
    <string name="nurse_panel">Nurse Panel</string>
    <!--radiologist panel-->
    <string name="radiologist_panel">Radiologist Panel</string>
    <!--Loading Page-->
    <string name="title_activity_loading_page">Loading Page</string>
    <!--take photo-->
    <string name="takephoto">Take Photo</string>
    <!--Yes-->
    <string name="yes">Yes</string>
    <!--No-->
    <string name="no">No</string>
    <!--OK-->
    <string name="ok">OK</string>
    <!--Cancel-->
    <string name="cancel">Cancel</string>
    <!--Submit-->
    <string name="submitallimages">Submit Images</string>
    <!--Edit-->
    <string name="edit">Edit</string>
    <!--Patient Last Name-->
    <string name="patientlastname">Patient ID</string>
    <!--Take photo of X-ray image.-->
    <string name="intro_xrayimg">Take photo of X-ray image.</string>
    <!--Medical examination results-->
    <string name="intro_physicalexam">Medical examination results</string>
    <!--Laboratory results-->
    <string name="intro_labresult">Laboratory results</string>
    <!--Do you have additional information to upload?-->
    <string name="intro_require_additionaldd">Do you have additional information to upload?</string>
    <!--Loading, wait a moment-->
    <string name="waitamoment">Loading, wait a moment</string>

    <!--Nothing changed.-->
    <string name="nothing_to_upload">Nothing to upload.</string>
    <!--Physical examination and laboratory results are empty-->
    <string name="exam_lab_result_empty">Physical examination and laboratory results are empty.</string>
    <!--Upload X-ray image?-->
    <string name="upload_xray_img">Upload X-ray image?</string>
    <!--No image updated, nothing to upload.-->
    <string name="upload_nothing">No image updated, nothing to upload.</string>

    <!--The result of the laboratory is empty-->
    <string name="lab_result_empty">The result of the laboratory is empty.</string>
    <!--Upload the exam result and the X-ray image?-->
    <string name="upload_exam_xray_img">Upload the exam result and the X-ray image?</string>

    <!--The result of the exam is empty-->
    <string name="exam_result_empty">The result of the exam is empty.</string>
    <!--Upload the lab result and the X-ray image?-->
    <string name="upload_lab_xray_img">Upload the lab result and the X-ray image?</string>

    <!--Confirm-->
    <string name="confirm">Confirm</string>

    <!--Confirmation-->
    <string name="Confirmation">Confirmation</string>
    <!--Are you ready to proceed?-->
    <string name="readtoproceed">Are you ready to proceed?</string>
    <!--Note-->
    <string name="note">Note</string>
    <!--Configurations-->
    <string name="action_settings">Configurations</string>
    <!--History-->
    <string name="history">History</string>
    <!--Do you want to upload an X-ray image?-->
    <string name="do_you_wanna_upload">Do you want to upload an X-ray image?</string>
    <!--X-ray image-->
    <string name="xrayimg">X-ray image:</string>
    <!--Result-->
    <string name="result">Result</string>
    <!--Successful Upload-->
    <string name="successfulupload">Successful Upload</string>
    <!--Done-->
    <string name="done">Done</string>
    <!--Save information-->
    <string name="saveinfo">Save information</string>
    <!--No X-ray image-->
    <string name="noxrayimg">No X-ray image</string>
    <!--Please take the X-ray image first.-->
    <string name="plztakexrayimgfirst">Please take the X-ray image first.</string>
    <!--Submit-->
    <string name="submit2">Submit</string>
    <!--Additional Information-->
    <string name="title_activity_additional_info">Additional Information</string>
    <string name="title_activity_late_info">Late Information</string>

    <!--Retake photo-->
    <string name="RetakePhoto">Retake photo</string>
    <!--Clinic-->
    <string name="Clinic">Clinic</string>
    <!--Healthcare Professional Name-->
    <string name="healthcare_pro_name">Healthcare Professional Name</string>
    <!--Nurse Email-->
    <string name="nurse_email">Nurse Email</string>
    <string name="submitquestion">Is patient under treatment?</string>
    <string name="submitquestion2">If Yes: Indicate month of treatment:</string>
    <string name="submitquestion2hint">Type number of months here</string>
</resources>
