<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.health.pengfei.chestlearn2.Radiologist_fragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/patientLastName_Radio"
        android:layout_width="316dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/patientlastname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radio_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/radioSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/submit2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/radio_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="65dp"
        android:cropToPadding="true"
        android:padding="1dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/image_border"
        android:layout_marginLeft="65dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="64dp" />

    <Button
        android:id="@+id/radioTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/takephoto"
        app:layout_constraintLeft_toRightOf="@+id/radio_image"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toTopOf="@+id/radio_image"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/radio_image"
        android:layout_marginBottom="8dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="370dp"
        android:layout_height="214dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_image">

        <EditText
            android:id="@+id/raidoNoteTextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note"
            android:scrollIndicators="right"
            android:scrollbars="vertical" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
